# minecraft-server-auto-stop

./: .gitignore  CMakeLists.txt  Opts.cpp  Opts.h  README.md  connections.h  main.cpp
